--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_fortune_wheel: ^1.3.1
   fortune_wheel_enhanced: ^0.0.4
   get: ^4.6.6
+  social_login_buttons: ^1.0.7
 
 dev_dependencies:
   flutter_test:
