--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.2
   social_login_buttons: ^1.0.7
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
