--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,11 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   http: ^1.2.2
+  intl: ^0.19.0
   shared_preferences: ^2.3.2
   social_login_buttons: ^1.0.7
   sqflite: ^2.3.3+1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
