--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,13 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  carousel_slider: ^5.0.0
   fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_clean_architecture: ^6.0.1
   flutter_fortune_wheel: ^1.3.1
+  flutter_speed_dial: ^7.0.0
   fortune_wheel_enhanced: ^0.0.4
   get: ^4.6.6
   google_fonts: ^6.2.1
@@ -30,4 +32,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/images/
+    - assets/images/3d/
     - assets/images/logo.png
