--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   carousel_slider: ^5.0.0
+  connectivity_plus: ^6.1.0
   fl_chart: ^0.68.0
   flutter:
     sdk: flutter
@@ -19,6 +20,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.2.2
   intl: ^0.19.0
+  mobile_scanner: ^6.0.2
   shared_preferences: ^2.3.2
   social_login_buttons: ^1.0.7
   sqflite: ^2.3.3+1
