--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,21 +7,22 @@ environment:
   sdk: '>=3.4.4 <4.0.0'
 
 dependencies:
+  awesome_notifications: ^0.10.0
   carousel_slider: ^5.0.0
   connectivity_plus: ^6.1.0
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
   fl_chart: ^0.68.0
   flutter:
     sdk: flutter
   flutter_clean_architecture: ^6.0.1
-  flutter_fortune_wheel: ^1.3.1
   flutter_speed_dial: ^7.0.0
-  fortune_wheel_enhanced: ^0.0.4
   get: ^4.6.6
   google_fonts: ^6.2.1
   http: ^1.2.2
   intl: ^0.19.0
   mobile_scanner: ^6.0.2
-  shared_preferences: ^2.3.2
+  permission_handler: ^11.3.1
   social_login_buttons: ^1.0.7
   sqflite: ^2.3.3+1
   table_calendar: ^3.1.2
